feat: add build in card pom.xml